<resources>
    <string name="app_name">QuizApp</string>
    <string name="intro">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="name">Name</string>
    <string name="start">START</string>
    <string name="submit">Submit</string>
    <string name="your_results">Your Results</string>
    <string name="congratulations_you_made_to_the_end">CONGRATULATIONS, YOU MADE TO THE END</string>
    <string name="finish">FINISH</string>
    <string name="result">$mCurrentPosition" + "/" + progressBar?.max</string>
    <string name="nameShadow">Name</string>
    <string name="goNext">GO TO NEXT QUESTION</string>
    <string name="congratulations">CONGRATULATIONS,</string>
</resources>